# naleystogramm-core

./: CMakeLists.txt  README.md
include/naleystogramm-core/: app.h  no_qt.h  types.h
include/naleystogramm-core/calls/: audiorecorder.h  callmanager.h  imediaengine.h
include/naleystogramm-core/diag/: demomode.h  logger.h  systeminfo.h  updatechecker.h  versionutils.h
include/naleystogramm-core/identity/: device_pairing.h  identity.h
include/naleystogramm-core/net/: discoveryclient.h  groupmanager.h  network.h  upnp.h
include/naleystogramm-core/shell/: remoteshellmanager.h  shellprocess.h
include/naleystogramm-core/storage/: sessionmanager.h  storage.h
include/naleystogramm-core/transfer/: filetransfer.h
src/: app.cpp
src/calls/: audiorecorder.cpp  callmanager.cpp
src/diag/: demomode.cpp  logger.cpp  systeminfo.cpp  updatechecker.cpp
src/identity/: device_pairing.cpp  identity.cpp
src/net/: discoveryclient.cpp  groupmanager.cpp  network.cpp  upnp.cpp
src/shell/: remoteshellmanager.cpp  shellprocess.cpp
src/storage/: sessionmanager.cpp  storage.cpp
src/transfer/: filetransfer.cpp
